; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-omap/extr_gpio.c_get_gpio_index.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-omap/extr_gpio.c_get_gpio_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @get_gpio_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_gpio_index(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = call i64 (...) @cpu_is_omap7xx()
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = and i32 %7, 31
  store i32 %8, i32* %2, align 4
  br label %27

9:                                                ; preds = %1
  %10 = call i64 (...) @cpu_is_omap24xx()
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %9
  %13 = load i32, i32* %3, align 4
  %14 = and i32 %13, 31
  store i32 %14, i32* %2, align 4
  br label %27

15:                                               ; preds = %9
  %16 = call i64 (...) @cpu_is_omap34xx()
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %21, label %18

18:                                               ; preds = %15
  %19 = call i64 (...) @cpu_is_omap44xx()
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %18, %15
  %22 = load i32, i32* %3, align 4
  %23 = and i32 %22, 31
  store i32 %23, i32* %2, align 4
  br label %27

24:                                               ; preds = %18
  %25 = load i32, i32* %3, align 4
  %26 = and i32 %25, 15
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %24, %21, %12, %6
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i64 @cpu_is_omap7xx(...) #1

declare dso_local i64 @cpu_is_omap24xx(...) #1

declare dso_local i64 @cpu_is_omap34xx(...) #1

declare dso_local i64 @cpu_is_omap44xx(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
